--- a/概述.md
+++ b/概述.md
@@ -1,11 +1,36 @@
 ## 是什么
 git是分布式版本控制工具。
+
+- 版本控制  
+  记录文件修改历史记录，方便版本切换。
+- 版本控制工具
+  - 集中式  
+    用SVN，有一个集中管理的服务器，即中央库。中央库有所有人的版本记录。
+  - 分布式  
+    有远程库（即中央库），还有本地库。git中央库损坏，本地库还能进行版本控制；SVN中央库损坏，就无法进行版本控制，而且历史版本会丢失。
+  - 两者对比分布式的优点  
+    - 断网也能开发（因为版本控制在本地进行）
+    - 每个客户端保存的是完整项目，包含历史记录，更安全，不会有单点故障问题。
+## 组成
+- 工作区  
+  存放代码的本地磁盘目录。工作区代码也能删，但是没有历史记录和版本。
+- 暂存区  
+  工作区代码git add添加到暂存区，临时存储，可以删掉，也没生成历史版本。
+- 本地库  
+  暂存区git commit提交到本地库就会生成历史版本，此时就删不掉了。git版本是基于上一版本的，所以不能删掉单一版本。可以把本地库删掉。
+- 远程库（代码托管中心）  
+  本地库git push推送到远程库。
+  - 局域网  
+    gitlab
+  - 互联网  
+    github  
+    gitee
 ## 内容
 1. 介绍
 2. 安装（略）
 3. 命令
 4. 分支（特性、创建、转换、合并、代码合并冲突解决）
-5. idea 集成git
+5. idea（开发工具） 集成git
 6. github
    - 创建远程库
    - 代码推送 push
