--- a/常用命令.md
+++ b/常用命令.md
@@ -43,4 +43,13 @@
   ```
   ![image](https://github.com/user-attachments/assets/d8d04529-0c08-4a16-b2f8-850a6d89d9a7)
   查看详细的日志内容
-  
+- 如果修改了文件，需要再追加至暂存区，否则git status会变红
+  ![image](https://github.com/user-attachments/assets/27dd4759-fe7b-49de-a33e-8044e664c6b4)
+  ![image](https://github.com/user-attachments/assets/f17270e2-5ecd-404c-ba61-11e78981ad94)
+  提示一个文件被修改，一行新增，一行删除。
+- 版本穿梭
+  ```
+  git reset --hard xxx(版本号)
+  ```
+  ![image](https://github.com/user-attachments/assets/392ac3b2-f985-415f-9eec-98a42756b44b)
+  查看版本号然后修改，可以明显看到指针指向改变。（head指针指向master，master指针指向具体版本代码/文件。修改时是修改的master指针的指向。
