--- a/概述.md
+++ b/概述.md
@@ -37,9 +37,9 @@ git是分布式版本控制工具。
    - 代码拉取pull
    - 代码克隆 clone
    - SSH免密登录
-   - idea集成github
+   - idea集成github（略）
 7. gitee（略）
-8. gitlab
+8. gitlab（略）
    - 基于局域网的代码托管中心（私有云）
    - 服务器搭建和部署
    - idea集成gitlab
